--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arohan Clothing</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <meta name="description" content="Arohan Designs - Discover trendy and fashionable designs of clothes for men and women.">
+
+  <meta name="keywords" content="Arohan, clothing, fashion, trendy, men, women, design, ">
+
+  <meta name="author" content="Debojit Santra">
+
+  <meta property="og:title" content="Arohan Designs">
+
+  <meta property="og:description" content="Discover trendy and fashionable designs of clothes for men and women.">
+
+  <meta property="og:image" content="/req/img.png">
+
+  <meta property="og:url" content="https://arohandesigns.github.io">
+  <title>Arohan Designs</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <meta 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
